<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context="in.chroot.belajarunittest.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:hint="Username"/>
    <EditText
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass"
        android:hint="Password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/bt_login"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:text="LOGIN"/>

</LinearLayout>
